[gd_scene load_steps=3 format=3 uid="uid://blvfhpohw7q5i"]

[ext_resource type="Script" uid="uid://djrdv21o3pwmx" path="res://assets/scripts/gui/main_gui.gd" id="1_egeds"]
[ext_resource type="Texture2D" uid="uid://b0103x8bhc84m" path="res://assets/sprites/Offline.tres" id="2_egeds"]

[node name="MainGui" type="MarginContainer"]
custom_minimum_size = Vector2(500, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -16.0
offset_right = 69.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_egeds")

[node name="Panel" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0.236552, 0.434864, 0.548829, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tab_focus_mode = 0

[node name="Settings" type="Control" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Server Settings Label" type="GridContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings Label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ctl4" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings Label"]
layout_mode = 2

[node name="Server Settings Label" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings Label"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Server Settings"
uppercase = true

[node name="ctl5" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings Label"]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings Label"]
layout_mode = 2
size_flags_vertical = 0

[node name="ctl6" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings Label"]
layout_mode = 2

[node name="Server Settings" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Spacer" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings"]
layout_mode = 2

[node name="Server Settings" type="GridContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings"]
layout_mode = 2
columns = 3

[node name="Gain Label" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
size_flags_horizontal = 0
text = "Gain"

[node name="Gain Slider" type="HSlider" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = -50.0
max_value = 50.0

[node name="dB Label" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
size_flags_horizontal = 4
text = "0.0 db"
vertical_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
text = "Port Number"

[node name="port" type="LineEdit" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "3000"

[node name="PortError" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Label5" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Input Mode"

[node name="Hbox2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings/Hbox2"]
layout_mode = 2

[node name="Color" type="ColorRect" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings/Hbox2/MarginContainer"]
layout_mode = 2
color = Color(0.284365, 0.594375, 0.87831, 1)

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings/Hbox2/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Visual Settings Label" type="GridContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visual Settings Label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ctl4" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visual Settings Label"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visual Settings Label"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Visualization Settings"
uppercase = true

[node name="ctl5" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visual Settings Label"]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visual Settings Label"]
layout_mode = 2
size_flags_vertical = 0

[node name="ctl6" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visual Settings Label"]
layout_mode = 2

[node name="Visualization Settings" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Spacer" type="Control" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings"]
layout_mode = 2

[node name="Visualization Settings" type="GridContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings"]
layout_mode = 2
columns = 3

[node name="Label9" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
text = "Scene Change Delay:"

[node name="SceneChangeDelay" type="LineEdit" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
size_flags_vertical = 4
text = "20"

[node name="DelayError" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
text = "Change Variance:"

[node name="SceneChangeVar" type="LineEdit" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "5"

[node name="VarianceError" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Label8" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Shuffle Scenes"

[node name="Hbox" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox"]
layout_mode = 2

[node name="Color" type="ColorRect" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox/MarginContainer"]
layout_mode = 2
color = Color(0.923801, 0.341137, 0.470247, 1)

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox/MarginContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Label10" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Fullscreen"

[node name="Hbox2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox2"]
layout_mode = 2

[node name="Color" type="ColorRect" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox2/MarginContainer"]
layout_mode = 2
color = Color(0.668051, 0.732712, 0.0804073, 1)

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox2/MarginContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Scene Select" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/TabContainer/Scene Select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Scene Select/MarginContainer3"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Scene Select/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SceneList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Scene Select/MarginContainer3/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Server Status"

[node name="StatusTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_egeds")
stretch_mode = 2

[node name="SceneSwitcher" type="Timer" parent="."]

[connection signal="value_changed" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings/Gain Slider" to="." method="_on_gain_slider_value_changed"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings/port" to="." method="_on_port_text_changed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Server Settings/Server Settings/Hbox2/MarginContainer/CheckBox" to="." method="_input_mode_toggled"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/SceneChangeDelay" to="." method="_on_scene_change_delay_text_changed"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/SceneChangeVar" to="." method="_on_scene_change_var_text_changed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox/MarginContainer/CheckBox" to="." method="_shuffle_mode_toggled"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Settings/VBoxContainer/Visualization Settings/Visualization Settings/Hbox2/MarginContainer/CheckBox" to="." method="_fullscreen_toggled"]
[connection signal="timeout" from="SceneSwitcher" to="." method="_on_scene_switcher_timeout"]
